[project]
name = "facelapse"
version = "0.1.0"
description = "create GIFs with your face"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.93",
    "face-recognition>=1.3.0",
    "imageio>=2.37.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "tf-keras>=2.19.0",
    "tensorflow>=2.15.0",
    "pillow-heif>=0.15.0",
]
